# winther-engine

./: CMakeLists.txt  LICENSE  README.md
include/: Client.h  Core.h  Engine.h  Entity.cpp  Entity.h  EntityManager.h  Entrypoint.h  Log.h  TextureManager.h  Winther.h
src/: Client.cpp  Engine.cpp  EntityManager.cpp  Log.cpp  TextureManager.cpp
